Fix missing spacing between number widget and prefix/suffix

--- a/src/ludivine/assets/client.css
+++ b/src/ludivine/assets/client.css
@@ -634,7 +634,7 @@ form {
 
     & .number {
         display: flex;
-        gap: px;
+        gap: 6px;
         align-items: center;
 
         & > span { font-size: 0.8em; }
